# kubeflow-playground

./: .gitignore  .gitmodules  README.md  pyproject.toml
kubeflow_playground/: io.py  ping.py
kubeflow_playground/pipelines/: container_op.py  demo.py
scripts/: install.sh  uninstall.sh  up.sh
