[project]
name = "kubeflow_playground"
version = "0.0.1"
description = ""
authors = [
    {name = "Yifan Wu",email = "tyivanwu@gmail.com"},
]
dependencies = [
    "kfp<2.0",
    "black>=23.3.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
